<resources>
    <string name="app_name">NGO Report</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_registration">Email Registration</string>


    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="email">Email</string>
    <string name="cancel">Cancel</string>


    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">NGO Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_name">Activity Name</string>
    <string name="welcome_to_report_app">NGO Reporting</string>
    <string name="logo">logo</string>
    <string name="create_new_report">Create New Report</string>
    <string name="add_project">Add Project</string>
</resources>
